@@ -39,6 +39,7 @@
 	- rollback: create rpmrollback.c, refactoring out of rpminstall.c.
 	- multilib: _prefer_color macro to choose elf32/elf64 files (#235757).
 	- rollback: add (*rbCheck), (*rbOrder), (*rbRun) vectors.
+	- strip rpmvercmp down to bare metallic C code.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
